--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "sweetalert2": "^11.7.29"
   },
   "devDependencies": {
+    "@types/node": "^20.7.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
